# python-envs-scenarios

./: LICENSE  README.md
multiroot-multi-env/: multiroot-gen.code-workspace
multiroot-multi-env/workspace1/: pyproject.toml
multiroot-multi-env/workspace2/: pyproject.toml
multiroot-multi-env/workspace2/src/: random_script2.py
multiroot-multi-env/workspace3/: pyproject.toml
multiroot-single-env/: README.md  multiroot-single-env.code-workspace  pyproject.toml
multiroot-single-env/workspace1/src/: random_script1.py
multiroot-single-env/workspace2/: pyproject.toml
multiroot-single-env/workspace3/src/: random_script3.py
