[project]
name = "myproject"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "eleanorjboyd", email = "26030610+eleanorjboyd@users.noreply.github.com" }
]
requires-python = ">=3.8"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
